# batteries-included

./: .envrc  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .goreleaser.yaml  .prettierignore  .prettierrc.js  .prettierrc.mjs  .spr.yml  .tool-versions  .yamllint.yaml  CHANGES.md  Cargo.toml  Dockerfile  LICENSE  README.md  flake.nix  image_registry.yaml  netlify.toml  rustfmt.toml  shell.nix  validate_azure.exs
.github/: actionlint.yaml  dependabot.yml
.github/instructions/: bi_golang.instructions.md  platform_elixir.instructions.md  project.instructions.md  static.instructions.md
.github/workflows/: bi.yml  bix.yml  bix_docker.yml  (+27 more)
bi/: .gitignore  go.mod  go.sum  gomod2nix.toml  main.go  package-lock.json
bootstrap/: azure-dev.install.json  azure-dev.spec.json  damian.install.json  damian.spec.json  dev.install.json  dev.spec.json  elliott.install.json  elliott.spec.json  int-prod.install.json  int-prod.spec.json  int-test.install.json  int-test.spec.json  integration-test.install.json  integration-test.spec.json  jason.install.json  jason.spec.json  local.install.json  local.spec.json  maurer.install.json  maurer.spec.json  team.json
ci/: control-server.yml  operator.yml  rust_utils.yml
cli/: .gitignore  Cargo.toml
cli/src/: args.rs  docker.rs  helpers.rs  initial_apply.rs  install_bin.rs  kind.rs  kube_provider.rs  lib.rs  logging.rs  main.rs  operating_system.rs  port_forward.rs  postgres_kube.rs  spec.rs
cli/src/commands/: dev.rs  mod.rs  stop.rs  uninstall.rs
cli/src/tasks/: download_install_spec.rs  get_install_spec.rs  inflate_local_spec.rs  initial_apply.rs  kube_bootstrap.rs  mix.rs  mod.rs  podman.rs  port_forward.rs  setup_db.rs  stop_kind.rs  uninstall_all_kube.rs
cli/static/: dev.json
cli/tests/: integration_test.rs
cli/tests/resources/specs/: dev.json  dev_cluster.json
control_server/: .prettierignore  README.md  coveralls.json  default_cluster.yaml  manifest.yaml  mix.exs
control_server_umbrella/: manifest.yaml  mix.exs
dev/: blame.sh  bootstrap.sh  build-local.sh  build-release-cli.sh  build_local.sh  clean-cluster.sh  cloc.sh  deps-nuke.sh  fmt.sh  from_yaml.py  gen-keys.sh  gen-static-specs.sh  gen-wireguard-client-config.sh  inotify-consumers.sh  kind-config.yaml  nuke-cluster-contents.sh  nuke-cluster.sh  nuke-clusters.sh  nuke-k3s.sh  nuke-platform.sh  nuke-test-db.sh  package-challenge.sh  package-lock.json  package.json  postgres_operator-values.yaml  push-aws.sh  regen.sh  regenerate-keys.sh  regenerate-static-specs.sh  run-mix-test.sh  start-wg-client.sh  stop-clusters.sh  stop-tailwind-proc.sh  to_json.py  ubuntu.sh  wireguard-client-config.sh
docker/: build-base.dockerfile  deploy-base.dockerfile  entrypoint.sh  keycloak.dockerfile  keycloak.dockerfile.dockerignore  kube-bootstrap.dockerfile  pastebin.dockerfile  pastebin.dockerfile.dockerignore  platform.dockerfile  platform.dockerfile.dockerignore  postgres.dockerfile
docs/: company_thesis.md  platform_areas.md  platform_goals.md  platform_software_evaluation.md
keycloak-theme/: .gitignore  eslint.config.js  package-lock.json  package.json  postcss.config.cjs  vite.config.ts
nix/: bi.nix  cli.nix  control.nix  fmt.nix  mission-control.nix  mix-command.nix  pastebin-containers.nix  pastebin-static.nix  pastebin.nix  pastebin_static.nix  platform-containers.nix  platform-release.nix  platform.nix  platform_release.nix  priv.nix  rust_crate.nix  shell.nix
operator/: Cargo.toml  rustfmt.toml
operator/cli/: Cargo.toml
operator/cli/src/: main.rs
operator/common/: Cargo.toml
operator/common/src/: cluster_spec.rs  cs_client.rs  error.rs  lib.rs  manager.rs
operator/common/src/actors/: messages.rs
operator/controller/: Cargo.toml
operator/controller/src/: main.rs
operator/controller_core/: Cargo.toml
operator/controller_core/src/: cs_client.rs  lib.rs  manager.rs  metrics.rs  prometheus.rs  reconciler.rs  state.rs
operator/controller_core/src/actors/: cluster_controller.rs  config_fetcher.rs  core_messages.rs  crd.rs  deps_ready.rs  mod.rs  namespace.rs  root.rs
operator/src/: bat_logging.rs  cluster_spec.rs  controller.rs  cs_client.rs  error.rs  install.rs  manager.rs
pastebin-go/: Makefile  docker-compose.yaml  go.mod  go.sum  gomod2nix.toml  main.go
platform_umbrella/: .credo.exs  .dialyzer_ignore.exs  .dockerignore  .formatter.exs  .gitignore  .prettierignore  .prettierrc.js  Dockerfile  Makefile  README.md  coveralls.json  default_cluster.yaml  manifest.yaml  mix.exs
project_templates/pastebin/: .envrc  .gitignore  Cargo.toml  package-lock.json  package.json
project_templates/pastebin/entity/: Cargo.toml
project_templates/pastebin/entity/src/: prelude.rs
project_templates/pastebin/migration/: Cargo.toml
project_templates/pastebin/src/: app_state.rs  errors.rs  handlers.rs  main.rs  mutation.rs  query.rs
project_templates/pastebin/templates/: index.html  show.html
project_templates/web/pastebin/: .envrc  .gitignore  Cargo.toml  build.rs  package-lock.json  package.json  tailwind.config.js
project_templates/web/pastebin/entity/: Cargo.toml
project_templates/web/pastebin/entity/src/: mod.rs  paste.rs
project_templates/web/pastebin/migration/: Cargo.toml
project_templates/web/pastebin/migration/src/: m20220101_000001_create_table.rs
project_templates/web/pastebin/src/: errors.rs  main.rs  router.rs  settings.rs  view.rs
project_templates/web/pastebin/templates/: base.html  show.html
registry-tool/: go.mod  go.sum  main.go
rust_utils/: Cargo.toml
rust_utils/cli/: Cargo.toml
rust_utils/cli/src/: bootstrap.rs  config.rs  dev.rs  main.rs  print_yaml.rs
server/: README.md  mix.exs
src/: cluster_spec.rs  controller.rs  error.rs  install.rs  main.rs  manager.rs
static/: .gitignore  .prettierrc.mjs  astro.config.mjs  config.toml  netlify.toml  package-lock.json  package.json  postcss.config.cjs  tailwind.config.cjs  tailwind.config.js  tsconfig.json
static_pages/: .eslintignore  .eslintrc.js  .gitignore  .prettierignore  config.toml  package-lock.json  package.json  tailwind.config.js  tsconfig.json
(+4660 files in other folders)
