[package]
authors = ["Elliott Clark <elliott.neil.clark@gmail.com>"]
edition = "2018"
name = "batteries-operator"
version = "0.1.0"
license = "Private"

[dependencies]

futures = "0.3.9"
tokio = { version = "1.0.1", features = ["full"] }

# pinning the version to 1.17.x since
# GKE is there it makes for a good stable target.
k8s-openapi = { version = "0.10.0", features = ["v1_17"], default-features = false }
kube = { version = "0.47.0", features = ["derive"] }
kube-runtime = "0.47.0"

schemars = "0.8.0"
serde = "1.0.119"
serde_json = "1.0.61"
serde_yaml = "0.8.15"

# Error handling
thiserror = "1.0.23"
tracing = "0.1.22"

prometheus = "0.11.0"