[package]
authors = ["Elliott Clark <elliott.neil.clark@gmail.com>"]
edition = "2018"
name = "batteries-operator"
version = "0.1.0"
license = "Private"
default-run = "controller"


[[bin]]
name = "controller"
path = "src/controller.rs"

[[bin]]
name = "install"
path = "src/install.rs"

[dependencies]

futures = "0.3.11"
tokio = { version = "1.0.2", features = ["full"] }

# pinning the version to 1.17.x since
# GKE is there it makes for a good stable target.
k8s-openapi = { version = "0.10.0", features = ["v1_17"], default-features = false }
kube = { version = "0.47.0", features = ["derive"] }
kube-runtime = "0.47.0"

schemars = "0.8.0"
serde = "1.0.119"
serde_json = "1.0.61"
serde_yaml = "0.8.15"

# Error handling
thiserror = "1.0.23"
tracing = "0.1.22"
tracing-subscriber = "0.2.15"

prometheus = "0.11.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"

[profile.dev]
opt-level = 1

[profile.release]
debug = 2
lto = true