[package]
name = "bcli"
version = "0.10.0"
edition = "2021"

[dependencies]
assert_cmd = { version = "2.0.12" }
clap = { version = "4.4.11", features = ["derive", "color", "usage"] }
clap-verbosity-flag = { version = "2.1.0" }
color-eyre = { version = "0.6.2" }
bollard = { version = "0.15.0", features = ["time", "ssl"] }
dirs = { version = "5.0.1" }
eyre = { version = "0.6.11" }
futures = { version = "0.3.29" }
hyper = { version = "1.1.0" }
ipnet = { version = "2.9.0" }
k8s-openapi = { version = "0.20.0", features = ["v1_26"] }
kube-client = { version = "0.87.1", features = ["ws", "oauth", "rustls-tls"] }
kube-runtime = { version = "0.87.1" }
reqwest = { version = "0.11.23", default-features = false, features = [
  "async-compression",
  "gzip",
  "deflate",
  "brotli",
  "json",
  "rustls-tls",
] }
serde = { version = "1.0.193" }
serde_json = { version = "1.0.108", default-features = true }
tempfile = { version = "3.8.1" }
thiserror = { version = "1.0.51" }
time = { version = "0.3.30", features = ["serde", "serde-human-readable"] }
tokio = { version = "1.35.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["net", "time"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18" }
url = { version = "2.5.0" }
uuid = { version = "1.6.1", features = ["v4", "v6", "serde"] }

[profile.release]
strip = true
lto = "thin"
opt-level = "z"
codegen-units = 1

[profile.dev.package.backtrace]
opt-level = 3
