[package]
name = "bcli"
version = "0.11.0"
edition = "2021"

[dependencies]
assert_cmd = { version = "2.0.14" }
clap = { version = "4.5.1", features = ["derive", "color", "usage"] }
clap-verbosity-flag = { version = "2.2.0" }
color-eyre = { version = "0.6.2" }
bollard = { version = "0.16.0", features = ["time", "ssl"] }
dirs = { version = "5.0.1" }
eyre = { version = "0.6.12" }
futures = { version = "0.3.30" }
hyper = { version = "1.2.0" }
ipnet = { version = "2.9.0" }
k8s-openapi = { version = "0.21.1", features = ["v1_26"] }
kube-client = { version = "0.88.0", features = ["ws", "oauth", "rustls-tls"] }
kube-runtime = { version = "0.88.0" }
reqwest = { version = "0.11.24", default-features = false, features = [
  "async-compression",
  "gzip",
  "deflate",
  "brotli",
  "json",
  "rustls-tls",
] }
serde = { version = "1.0.197" }
serde_json = { version = "1.0.114", default-features = true }
tempfile = { version = "3.10.1" }
thiserror = { version = "1.0.57" }
time = { version = "0.3.34", features = ["serde", "serde-human-readable"] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["net", "time"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18" }
url = { version = "2.5.0" }
uuid = { version = "1.7.0", features = ["v4", "v6", "serde"] }

[profile.release]
strip = true
lto = "thin"
opt-level = "z"
codegen-units = 1

[profile.dev.package.backtrace]
opt-level = 3
