[workspace]
members = [
  "common",
  "cli",
  "controller_core",
  "controller",
]

[profile.release]
# Yeah debugging is hard in production. Please don't make it harder
debug = 2

# LTO the whole thing. LTO should really be called whole
# program optimization pass. It's worth it.
lto = true

# 1 gives the best optimization but turns off the parallelism.
codegen-units = 1
