[package]
authors = ["Elliott Clark <elliott.neil.clark@gmail.com>"]
edition = "2018"
name = "controller"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

common = {path = "../common"}
controller_core = {path = "../controller_core"}
# Concurrency
futures = "0.3.12"
tokio = { version = "1.2.0", features = ["full"] }

# pinning the version to 1.17.x since
# GKE is there it makes for a good stable target.
k8s-openapi = { version = "0.11.0", features = ["v1_17"], default-features = false }
kube = { version = "0.48.0", features = ["derive"] }
kube-runtime = "0.48.0"

# Logging/Tracing
tracing = "0.1.23"
# Print logging to stdout. Send it places
tracing-subscriber = "0.2.15"
# Jemalloc has so many tools and it's faster.
# We'll prematurely optimize and put it in here
[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"

# Command line parsing.
clap = "2.33.3"
