[package]
name = "pastebin"
version = "0.8.2"
edition = "2021"

[dependencies]
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "ansi"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114" }

thiserror = "1.0.57"

tokio = { version = "1.36.0", features = ["full"] }

axum = { version = "0.7.4", features = ["json", "query"] }
tower = { version = "0.4.13" }
tower-http = { version = "0.5.2", features = [
  "compression-full",
  "limit",
  "fs",
  "timeout",
  "trace",
] }
tower-cookies = "0.10.0"
axum-extra = { version = "0.9.2", features = ["cookie-signed"] }

askama = { version = "0.12.1", features = [
  "with-axum",
  "mime",
  "mime_guess",
  "serde-json",
  "config",
  "humansize",
  "num-traits",
  "urlencode",
] }
askama_axum = { version = "0.4.0" }
include_dir = { version = "0.7.3" }
mime_guess = { version = "2.0.4" }

anyhow = "1.0.80"
uuid = { version = "1.7.0", features = ["v4"] }

entity = { path = "./entity" }
migration = { path = "./migration" }

[dependencies.sea-orm]
version = "0.12.14"
features = ["sqlx-postgres", "runtime-tokio-rustls"]

[build-dependencies]
npm_rs = "1.0.0"

[features]
default = ["generate_styles"]
generate_styles = []

[workspace]
members = [".", "migration", "entity"]


[profile.release]
lto = "thin"
opt-level = "z"
codegen-units = 1
strip = true
