[package]
authors = [
    "Elliott Clark <elliott@batteriesincl.com>",
    "Patrick White <patrick@batteriesincl.com>"
    ]
edition = "2018"
name = "cli"
version = "0.1.0"

[dependencies]
common = { path = "../common", features = ["kube-api", "app"] }
# Concurrency
futures = "0.3.21"
tokio = { version = "1.19.2", features = ["full"] }
# Logging/Tracing
tracing = "0.1.31"
clap = { version = "3.1", features = ["derive"] }
# Yaml
serde = "1.0.136"
serde_json = "1.0.79"
serde_yaml = "0.8.23"
thiserror = "1.0"
async-trait = "0.1.56"
# fuser = "0.11.0"
