[package]
name = "entity"
version = "0.7.0"
edition = "2021"

[dependencies]

sea-orm = { version = "0.12.10", features = [
  "with-json",
  "macros",
  "sqlx-postgres",
  "runtime-tokio-rustls",
] }
serde = { version = "1.0.193", features = ["derive"] }
uuid = { version = "1.6.1", features = ["v4"] }
