[package]
name = "entity"
version = "0.8.2"
edition = "2021"

[dependencies]

sea-orm = { version = "0.12.14", features = [
  "with-json",
  "macros",
  "sqlx-postgres",
  "runtime-tokio-rustls",
] }
serde = { version = "1.0.197", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4"] }
