[package]
name = "migration"
version = "0.8.2"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "0.12.11"
features = ["sqlx-postgres", "runtime-tokio-rustls"]
