[package]
name = "pastebin"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = {version = "0.1.37"}
tracing-subscriber = {version="0.3.16", features = ["env-filter", "ansi"]}
serde = {version = "1.0.152", features = ["derive"]}
serde_json = {version = "1.0.93"}

thiserror = "1.0.38"

tokio = { version = "1.25.0", features = ["full"] }

axum = {version = "0.6.7", features = ["headers", "json", "query"] }
tower = { version ="0.4.13"}
tower-http = { version = "0.3.5", features = ["compression-full", "limit", "fs", "timeout", "trace"] }
tower-cookies = "0.9.0"
axum-extra = { version = "0", features = ["cookie-signed"] }

askama = {version ="0.11.1", features = ["with-axum","mime",  "mime_guess", "serde-json", "config", "humansize", "num-traits", "urlencode"]}
askama_axum = {version = "0.2.1"}
include_dir = {version = "0.7.3"}
mime_guess = {version = "2.0.4"}

anyhow = "1.0.69"
uuid = {version = "1.3.0", features = [ "v4"]}

entity = { path = "./entity" }
migration = { path = "./migration" }

[dependencies.sea-orm]
version = "0.11.0"
features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls"
]

[build-dependencies]
npm_rs = "1.0.0"

[features]
default = ["generate_styles"]
generate_styles = []

[workspace]
members = [".",   "migration", "entity"]


[profile.release]
lto = "thin"
opt-level = "z"
codegen-units = 1
strip = true
