[package]
name = "pastebin"
version = "0.6.0"
edition = "2021"

[dependencies]
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "ansi"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = { version = "1.0.96" }

thiserror = "1.0.40"

tokio = { version = "1.28.0", features = ["full"] }

axum = { version = "0.6.18", features = ["headers", "json", "query"] }
tower = { version = "0.4.13" }
tower-http = { version = "0.4.0", features = [
  "compression-full",
  "limit",
  "fs",
  "timeout",
  "trace",
] }
tower-cookies = "0.9.0"
axum-extra = { version = "0.7.4", features = ["cookie-signed"] }

askama = { version = "0.12.0", features = [
  "with-axum",
  "mime",
  "mime_guess",
  "serde-json",
  "config",
  "humansize",
  "num-traits",
  "urlencode",
] }
askama_axum = { version = "0.3.0" }
include_dir = { version = "0.7.3" }
mime_guess = { version = "2.0.4" }

anyhow = "1.0.71"
uuid = { version = "1.3.1", features = ["v4"] }

entity = { path = "./entity" }
migration = { path = "./migration" }

[dependencies.sea-orm]
version = "0.11.3"
features = ["sqlx-postgres", "runtime-tokio-native-tls"]

[build-dependencies]
npm_rs = "1.0.0"

[features]
default = ["generate_styles"]
generate_styles = []

[workspace]
members = [".", "migration", "entity"]


[profile.release]
lto = "thin"
opt-level = "z"
codegen-units = 1
strip = true
