[package]
name = "entity"
version = "0.7.0"
edition = "2021"

[dependencies]

sea-orm = { version = "0.12.2", features = [
  "with-json",
  "macros",
  "sqlx-postgres",
  "runtime-tokio-rustls",
] }
serde = { version = "1.0.183", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4"] }
