[package]
name = "entity"
version = "0.7.0"
edition = "2021"

[dependencies]

sea-orm = { version = "0.12.4", features = [
  "with-json",
  "macros",
  "sqlx-postgres",
  "runtime-tokio-rustls",
] }
serde = { version = "1.0.189", features = ["derive"] }
uuid = { version = "1.5.0", features = ["v4"] }
