[package]
name = "entity"
version = "0.7.0"
edition = "2021"

[dependencies]

sea-orm = { version = "0.12.6", features = [
  "with-json",
  "macros",
  "sqlx-postgres",
  "runtime-tokio-rustls",
] }
serde = { version = "1.0.192", features = ["derive"] }
uuid = { version = "1.6.1", features = ["v4"] }
